# HyprLauncher

./: .gitignore  CMakeLists.txt  README.md
resources/: style.css
src/: AppModel.cpp  AppModel.hpp  LauncherWindow.cpp  LauncherWindow.hpp  main.cpp
